infrastructure/k8s/base/ingress/grafana-ops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ops
  annotations:
    nginx.ingress.kubernetes.io/app-root: /grafana
spec:
  ingressClassName: nginx
  rules:
    - host: ops.dev.fires.systems
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
